mock data and mobile improvement

--- a/src/app/components/win-streaks/win-streaks-search/win-streaks-search.component.html
+++ b/src/app/components/win-streaks/win-streaks-search/win-streaks-search.component.html
@@ -23,6 +23,8 @@
         <span class="stack-text">Current Streak:</span>
       </mat-panel-description>
     </mat-expansion-panel-header>
+    <span class="panel-deckcode-resp">{{ deck.actualCode }}</span>
+    <p>&nbsp;</p>
     <div class="inline-cards" *ngFor="let card of deck.actualDeck">
       <img
         class="cards justify-content-center"
