clean up and more mobile improvement - added socials

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -51,7 +51,8 @@
           <div>&nbsp;</div>
           <p>
             If you're having issues seeing your data in the 'Local Player
-            Stats', please restart your client, start a game and then refresh this page.
+            Stats', please restart your client, start a game and then refresh
+            this page.
           </p>
           <p></p>
         </div>
@@ -96,7 +97,21 @@
   </mat-tab-group>
   <div>&nbsp;</div>
   <p>
-    <a href="https://github.com/AnthonyT5591/Mejais">Link to Github Repo</a>
+    <a href="https://github.com/AnthonyT5591/Mejais"
+      ><img
+        class="social-icon"
+        src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png"
+        alt=""
+      /></a
+    >
+
+    <a href="https://twitter.com/_Toxey"
+      ><img
+        class="social-icon"
+        src="https://cdn1.iconfinder.com/data/icons/windev-contacts-2/512/twitter_button-512.png"
+        alt=""
+      /></a
+    >
   </p>
   <footer>
     Thank you for visiting!&nbsp;
