--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -44,30 +44,17 @@ p {
   max-width: 1050px;
   flex-direction: column;
   align-items: center;
-  /* background: lightcoral; */
 }
 
 .content-main {
   display: flex;
   margin: 32px auto;
   padding: 0 16px;
-  /* max-width: 1050px; */
   flex-direction: column;
   align-items: center;
-  /* background: lightcoral; */
-}
-svg.material-icons {
-  height: 24px;
-  width: auto;
 }
 
-svg.material-icons:not(:last-child) {
-  margin-right: 8px;
-}
 
-.card svg.material-icons path {
-  fill: #888;
-}
 
 .card-container {
   display: flex;
@@ -125,24 +112,9 @@ svg.material-icons:not(:last-child) {
 }
 
 .mejais-icon {
-  /* width: 80px; */
   position: absolute;
   left: -10px;
   top: -px;
-}
-svg#rocket {
-  width: 80px;
-  position: absolute;
-  left: -10px;
-  top: -24px;
-}
-
-svg#rocket-smoke {
-  height: 100vh;
-  position: absolute;
-  top: 10px;
-  right: 180px;
-  z-index: -10;
 }
 
 a,
@@ -156,38 +128,6 @@ a:hover {
   color: #125699;
 }
 
-.terminal {
-  position: relative;
-  width: 80%;
-  max-width: 600px;
-  border-radius: 6px;
-  padding-top: 45px;
-  margin-top: 8px;
-  overflow: hidden;
-  background-color: rgb(15, 15, 16);
-}
-
-.terminal::before {
-  content: "\2022 \2022 \2022";
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 4px;
-  background: rgb(58, 58, 58);
-  color: #c2c3c4;
-  width: 100%;
-  font-size: 2rem;
-  line-height: 0;
-  padding: 14px 0;
-  text-indent: 4px;
-}
-
-.terminal pre {
-  font-family: SFMono-Regular, Consolas, Liberation Mono, Menlo, monospace;
-  color: white;
-  padding: 0 1rem 1rem;
-  margin: 0;
-}
 
 .circle-link {
   height: 40px;
@@ -221,39 +161,12 @@ footer a {
   align-items: center;
 }
 
-.github-star-badge {
-  color: #24292e;
-  display: flex;
-  align-items: center;
-  font-size: 12px;
-  padding: 3px 10px;
-  border: 1px solid rgba(27, 31, 35, 0.2);
-  border-radius: 3px;
-  background-image: linear-gradient(-180deg, #fafbfc, #eff3f6 90%);
-  margin-left: 4px;
-  font-weight: 600;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
-    sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
-}
 
-.github-star-badge:hover {
-  background-image: linear-gradient(-180deg, #f0f3f6, #e6ebf1 90%);
-  border-color: rgba(27, 31, 35, 0.35);
-  background-position: -0.5em;
-}
-
-.github-star-badge .material-icons {
-  height: 16px;
-  width: 16px;
+.social-icon {
+  height: 30px;
+  width: 30px;
   margin-right: 4px;
-}
-
-svg#clouds {
-  position: fixed;
-  bottom: -160px;
-  left: -230px;
-  z-index: -10;
-  width: 1920px;
+  margin-left: 4px;
 }
 
 .invalid-error {
@@ -270,7 +183,6 @@ svg#clouds {
 }
 
 .col {
-  /* display: inline; */
   width: 50%;
 }
 .leaderboard {
@@ -307,7 +219,6 @@ svg#clouds {
     width: 100%;
     overflow: auto;
   }
-
 }
 
 @media (max-width: 1600px) {
@@ -322,9 +233,3 @@ svg#clouds {
   }
 }
 
-@media screen and (max-width: 575px) {
-  svg#rocket-smoke {
-    display: none;
-    visibility: hidden;
-  }
-}
